<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.rizkym.mulyando.home.HomeFragment"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.rizkym.mulyando.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_riwayat_pekerjaan"
        android:name="com.rizkym.mulyando.riwayatperbaikan.RiwayatPekerjaanFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_riwayat_pekerjaan" />

    <fragment
        android:id="@+id/nav_bantuan"
        android:name="com.rizkym.mulyando.bantuan.BantuanFragment"
        android:label="@string/bantuan"
        tools:layout="@layout/fragment_bantuan" />

    <fragment
        android:id="@+id/nav_setting"
        android:name="com.rizkym.mulyando.setting.SettingFragment"
        android:label="@string/setting"
        tools:layout="@layout/fragment_setting" />

</navigation>