<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".home.detail.DetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/topAppBar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:navigationIcon="@drawable/baseline_arrow_back_ios_new_24" />

        </com.google.android.material.appbar.AppBarLayout>

        <FrameLayout
            android:id="@+id/mapLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appBarLayout">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="0dp">

                <fragment
                    android:id="@+id/mapView"
                    android:name="com.google.android.gms.maps.SupportMapFragment"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </com.google.android.material.card.MaterialCardView>

            <ImageView
                android:id="@+id/direction"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:contentDescription="@string/direction"
                app:srcCompat="@drawable/direction" />
        </FrameLayout>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardViewUser"
            style="@style/CardViewDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mapLayout">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/icon_place"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/baseline_place_24" />

                <TextView
                    android:id="@+id/tvPlace"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/starbuck_kokas_mall_kota_kasablangka"
                    android:textAppearance="@style/defaultTextBold"
                    app:layout_constraintBottom_toBottomOf="@+id/imageView2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imageView2"
                    app:layout_constraintTop_toTopOf="@+id/imageView2" />

                <TextView
                    android:id="@+id/tvAddress"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/addressExample"
                    android:textAppearance="@style/subText"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imageView2"
                    app:layout_constraintStart_toStartOf="@+id/tvPlace"
                    app:layout_constraintTop_toBottomOf="@+id/tvPlace" />

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginTop="8dp"
                    android:contentDescription="@string/icon_profile"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvAddress"
                    app:srcCompat="@drawable/baseline_person_24" />

                <TextView
                    android:id="@+id/tvName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginStart="8dp"
                    android:text="@string/rizky"
                    android:textAppearance="@style/defaultTextBold"
                    app:layout_constraintBottom_toBottomOf="@+id/imageView4"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imageView4"
                    app:layout_constraintTop_toTopOf="@+id/imageView4" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardViewKerusakan"
            style="@style/CardViewDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardViewUser">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="12dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/icon_kerusakan"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/baseline_broken_image_24" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="28dp"
                    android:text="@string/kerusakan"
                    android:textAppearance="@style/defaultTextBold" />

                <TextView
                    android:id="@+id/tvMachineName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="28dp"
                    android:layout_marginTop="22dp"
                    android:text="@string/machineExample"
                    android:textAppearance="@style/subText" />

                <TextView
                    android:id="@+id/tvDiagnosis"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="28dp"
                    android:layout_marginTop="48dp"
                    android:text="@string/diagnosisExample"
                    android:textAppearance="@style/subText" />
            </FrameLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardViewPerbaikan"
            style="@style/CardViewDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardViewKerusakan">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="28dp"
                    android:text="@string/perbaikan"
                    android:textAppearance="@style/defaultTextBold" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/icon_perbaikan"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/baseline_home_repair_service_24" />

                <ImageView
                    android:id="@+id/ivEdit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:contentDescription="@string/edit"
                    android:visibility="invisible"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/baseline_edit_18" />

                <TextView
                    android:id="@+id/tvPerbaikan"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginStart="28dp"
                    android:layout_marginTop="24dp"
                    android:textAppearance="@style/subText" />
            </FrameLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardViewRincian"
            style="@style/CardViewDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardViewPerbaikan">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="28dp"
                    android:text="@string/rincian"
                    android:textAppearance="@style/defaultTextBold" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/icon_rincian"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/baseline_info_24" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="28dp"
                    android:layout_marginTop="24dp"
                    android:text="@string/no_kerusakan"
                    android:textAppearance="@style/subText" />

                <TextView
                    android:id="@+id/tvNoKerusakan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="24dp"
                    android:text="@string/noKerusakanExample"
                    android:textAppearance="@style/subText" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="28dp"
                    android:layout_marginTop="48dp"
                    android:text="@string/tanggal"
                    android:textAppearance="@style/subText" />

                <TextView
                    android:id="@+id/tvDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="48dp"
                    android:text="@string/_17_june"
                    android:textAppearance="@style/subText" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="28dp"
                    android:layout_marginTop="72dp"
                    android:text="@string/status"
                    android:textAppearance="@style/subText" />

                <TextView
                    android:id="@+id/tvStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="72dp"
                    android:text="@string/test"
                    android:textAppearance="@style/subText" />
            </FrameLayout>
        </com.google.android.material.card.MaterialCardView>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardViewRincian"
            app:layout_constraintVertical_bias="1.0">

            <TextView
                android:id="@+id/buttonInput"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/md_theme_light_surfaceTint"
                android:gravity="start|center"
                android:padding="18dp"
                android:text="@string/inputPerbaikan"
                android:textAppearance="@style/defaultTextBold"
                android:textColor="@color/white" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/buttonCall"
                style="?attr/floatingActionButtonSmallStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_margin="6dp"
                android:backgroundTint="@color/md_theme_light_secondaryContainer"
                android:contentDescription="@string/call_user"
                android:src="@drawable/baseline_phone_24"
                app:tint="@color/md_theme_light_onSecondaryContainer" />
        </FrameLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>